--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,8 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="devchallenge.labyrinth.dialogs.PauseFragment">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="devchallenge.labyrinth.MenuActivity">
 
     <GridLayout
         android:layout_width="wrap_content"
@@ -11,31 +17,29 @@
         android:columnCount="1">
 
         <Button
-            android:id="@+id/resume_game"
-            android:layout_gravity="fill_horizontal"
-            android:text="@string/resume" />
-
-        <Button
             android:id="@+id/new_game"
             android:layout_gravity="fill_horizontal"
+            android:onClick="onClick"
             android:text="@string/new_game" />
 
         <Button
             android:id="@+id/load_game"
             android:layout_gravity="fill_horizontal"
+            android:onClick="onClick"
             android:text="@string/load_game" />
 
         <Button
-            android:id="@+id/save_game"
+            android:id="@+id/settings"
             android:layout_gravity="fill_horizontal"
-            android:text="@string/save_game" />
+            android:onClick="onClick"
+            android:text="@string/settings" />
 
         <Button
-            android:id="@+id/menu"
+            android:id="@+id/exit"
             android:layout_gravity="fill_horizontal"
-            android:text="@string/menu" />
+            android:onClick="onClick"
+            android:text="@string/exit" />
 
     </GridLayout>
-
 
 </RelativeLayout>
