Realized Breadth First Search algorithm for solve maze

--- a/app/src/main/res/layout/fragment_pause.xml
+++ b/app/src/main/res/layout/fragment_pause.xml
@@ -1,41 +1,78 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="devchallenge.labyrinth.dialogs.PauseFragment">
+    android:layout_height="match_parent">
 
-    <GridLayout
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:columnCount="1">
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginTop="6dp"
+        android:background="@drawable/bg_dialog"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="20dp">
 
-        <Button
-            android:id="@+id/resume_game"
-            android:layout_gravity="fill_horizontal"
-            android:text="@string/resume" />
 
-        <Button
-            android:id="@+id/new_game"
-            android:layout_gravity="fill_horizontal"
-            android:text="@string/new_game" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_title"
+            android:gravity="center_vertical|center_horizontal"
+            android:padding="10dp"
+            android:text="@string/pause"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
-        <Button
-            android:id="@+id/load_game"
-            android:layout_gravity="fill_horizontal"
-            android:text="@string/load_game" />
+        />
 
-        <Button
-            android:id="@+id/save_game"
-            android:layout_gravity="fill_horizontal"
-            android:text="@string/save_game" />
 
-        <Button
-            android:id="@+id/menu"
-            android:layout_gravity="fill_horizontal"
-            android:text="@string/menu" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    </GridLayout>
+            <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:columnCount="1">
+
+                <Button
+                    android:id="@+id/resume_game"
+                    android:layout_gravity="fill_horizontal"
+                    android:text="@string/resume" />
+
+                <Button
+                    android:id="@+id/new_game"
+                    android:layout_gravity="fill_horizontal"
+                    android:text="@string/new_game" />
+
+                <Button
+                    android:id="@+id/load_game"
+                    android:layout_gravity="fill_horizontal"
+                    android:text="@string/load_game" />
+
+                <Button
+                    android:id="@+id/save_game"
+                    android:layout_gravity="fill_horizontal"
+                    android:text="@string/save_game" />
+
+                <Button
+                    android:id="@+id/menu"
+                    android:layout_gravity="fill_horizontal"
+                    android:text="@string/menu" />
+
+            </GridLayout>
+
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
+
