--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,4 +72,12 @@
         android:onClick="onClick"
         android:src="@drawable/ic_pause_black_24dp" />
 
+    <ImageButton
+        android:id="@+id/solve_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:onClick="onClick"
+        android:src="@drawable/ic_visibility_black_24dp" />
+
 </RelativeLayout>
