--- a/app/src/main/res/layout/fragment_save.xml
+++ b/app/src/main/res/layout/fragment_save.xml
@@ -53,13 +53,13 @@
 
     </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/close_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/bt_dialog_close"
-        android:text="×"
+        android:src="@drawable/ic_clear_black_24dp"
         android:textColor="#449dee" />
 </RelativeLayout>
