--- a/app/src/main/res/layout/fragment_end_game.xml
+++ b/app/src/main/res/layout/fragment_end_game.xml
@@ -33,7 +33,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="@dimen/m_dimen">
 
             <GridLayout
                 android:layout_width="wrap_content"
@@ -45,16 +46,19 @@
                 <Button
                     android:id="@+id/new_game"
                     android:layout_gravity="fill_horizontal"
+                    android:layout_margin="@dimen/s_dimen"
                     android:text="@string/new_game" />
 
                 <Button
                     android:id="@+id/load_game"
                     android:layout_gravity="fill_horizontal"
+                    android:layout_margin="@dimen/s_dimen"
                     android:text="@string/load_game" />
 
                 <Button
                     android:id="@+id/menu"
                     android:layout_gravity="fill_horizontal"
+                    android:layout_margin="@dimen/s_dimen"
                     android:text="@string/menu" />
 
             </GridLayout>
