--- a/app/src/main/res/layout/fragment_saved_games.xml
+++ b/app/src/main/res/layout/fragment_saved_games.xml
@@ -59,14 +59,14 @@
     </RelativeLayout>
 
 
-    <Button
+    <ImageButton
+        android:src="@drawable/ic_clear_black_24dp"
         android:id="@+id/close_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/bt_dialog_close"
-        android:text="×"
         android:textColor="#449dee" />
 
 </RelativeLayout>
