--- a/app/src/main/res/layout/item_saved_game.xml
+++ b/app/src/main/res/layout/item_saved_game.xml
@@ -4,19 +4,27 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/m_dimen">
 
-    <TextView
-        android:id="@+id/save_game_name"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:background="@drawable/bg_dialog"
+        android:padding="@dimen/m_dimen">
 
-    <ImageButton
-        android:id="@+id/delete_saved_game"
-        android:src="@drawable/ic_delete_black_24dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/save_game_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textSize="17sp" />
+
+        <ImageButton
+            android:id="@+id/delete_saved_game"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_delete_black_24dp" />
+    </RelativeLayout>
 
 
 </RelativeLayout>
