--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,18 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:buttonStyle">@style/MyButton</item>
+        <item name="android:imageButtonStyle">@style/MyButton</item>
+        <item name="buttonStyle">@style/MyButton</item>
+        <item name="imageButtonStyle">@style/MyButton</item>
+
+    </style>
+
+    <style name="MyButton" parent="android:Widget.Button">
+        <item name="android:background">@drawable/blue_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:padding">@dimen/m_dimen</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
