--- a/app/src/main/res/layout/fragment_pause.xml
+++ b/app/src/main/res/layout/fragment_pause.xml
@@ -26,7 +26,8 @@
             android:padding="10dp"
             android:text="@string/pause"
             android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:typeface="serif" />
 
         />
 
