--- a/app/src/main/res/layout/fragment_save.xml
+++ b/app/src/main/res/layout/fragment_save.xml
@@ -26,7 +26,8 @@
             android:padding="10dp"
             android:text="@string/save_game"
             android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:typeface="serif" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,7 +40,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:hint="file name" />
+                android:hint="label"
+                android:typeface="serif" />
 
         </LinearLayout>
 
