--- a/app/src/main/res/layout/fragment_saved_games.xml
+++ b/app/src/main/res/layout/fragment_saved_games.xml
@@ -28,7 +28,8 @@
             android:padding="10dp"
             android:text="@string/load_game"
             android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:typeface="serif" />
 
         />
 
@@ -60,13 +61,13 @@
 
 
     <ImageButton
-        android:src="@drawable/ic_clear_black_24dp"
         android:id="@+id/close_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/bt_dialog_close"
+        android:src="@drawable/ic_clear_black_24dp"
         android:textColor="#449dee" />
 
 </RelativeLayout>
