--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -26,7 +26,8 @@
             android:padding="10dp"
             android:text="@string/settings"
             android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:typeface="serif" />
 
         <LinearLayout
             android:layout_width="match_parent"
