--- a/app/src/main/res/layout/item_saved_game.xml
+++ b/app/src/main/res/layout/item_saved_game.xml
@@ -15,7 +15,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:typeface="serif" />
 
         <ImageButton
             android:id="@+id/delete_saved_game"
