--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="m_dimen">16dp</dimen>
     <dimen name="s_dimen">8dp</dimen>
+    <dimen name="title_text_size">30sp</dimen>
 </resources>
