--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:padding">@dimen/m_dimen</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:typeface">serif</item>
     </style>
 
 </resources>
