--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -10,6 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="devchallenge.labyrinth.GameActivity">
 
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/bg_dialog"
+        android:padding="@dimen/m_dimen"
+        android:textSize="18sp"
+        android:typeface="serif" />
+
     <ImageButton
         android:id="@+id/pause_button"
         android:layout_width="wrap_content"
