--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -12,10 +12,13 @@
 
     <TextView
         android:id="@+id/message"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginRight="@dimen/s_dimen"
+        android:layout_toLeftOf="@+id/pause_button"
         android:background="@drawable/bg_dialog"
+        android:gravity="center"
         android:padding="@dimen/m_dimen"
         android:textSize="18sp"
         android:typeface="serif" />
